--- a/responsive.css
+++ b/responsive.css
@@ -6,7 +6,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-  background-color: #333;
+  background-color: green;
 }
 
 .header {
